--- a/madLibs/madLib.html
+++ b/madLibs/madLib.html
@@ -17,12 +17,20 @@
 			 <button id="lib-button">Lib it!</button>
 			  
 			 <div id="story"></div>  
+			 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+			 <script src="js/custom.js"></script>
 		</body>
 	</html>
 	
 <!-- 
 1) Add a script tag to the bottom of the page for your code.
 2) Add an event listener to the button so that it calls a makeMadLib function when clicked.
-3)In the makeMadLib function, retrieve the current values of the form input elements, make a story from them, and output that in the story div (like "Laura really likes pink cucumbers.") -->
+3)In the makeMadLib function, retrieve the current values of the form input elements, make a story from them, and output that in the story div (like "Laura really likes good code.") -->
+
+
+<!-- Problem: Need to get values from the user in order to create a Mad Lib -->
+<!-- We need to have two different pieces of code to handle this.
+Step 1 the user enters information into form and clicks the submit button 
+Step 2 we need to create an event listener to be listening on the button so that when the user clicks it, we can execute a callback function - jQuery, use .on() for a click event. -->
 
 <!-- Bonus: Make an object with the list elements as keys and the inputs as values.  -->
